@@ -1,0 +1,10 @@
+\header
+{
+texidoc = "Tildes in lyric syllables are converted to tie symbols."
+  }
+
+\version "2.9.22"
+
+\lyrics {
+  bla~bla
+}
